# QT-2DCad

./: CMakeLists.txt  README.md
CMakeModules/: qt5.cmake
src/: CMakeLists.txt
src/app/: App.cpp  App.h  CMakeLists.txt  main.cpp  resources.qrc
src/command/: CMakeLists.txt  Command.h  CommandChangeDrawArea.cpp  CommandChangeDrawArea.h  CommandChangeShape.cpp  CommandChangeShape.h  CommandCreateArc.cpp  CommandCreateArc.h  CommandCreateBezier.cpp  CommandCreateBezier.h  CommandCreateDraw.cpp  CommandCreateDraw.h  CommandCreateFile.cpp  CommandCreateFile.h  CommandCreateLine.cpp  CommandCreateLine.h  CommandCreateNewFile.cpp  CommandCreateNewFile.h  CommandDraw.h  CommandDrawArc.cpp  CommandDrawArc.h  CommandDrawBezier.cpp  CommandDrawBezier.h  CommandDrawLine.cpp  CommandDrawLine.h  CommandIO.cpp  CommandIO.h  CommandIOFile.cpp  CommandIOFile.h  CommandMouseMoveInDrawArea.cpp  CommandMouseMoveInDrawArea.h  CommandMousePressInDrawArea.cpp  CommandMousePressInDrawArea.h  CommandMouseReleaseInDrawArea.cpp  CommandMouseReleaseInDrawArea.h  CommandMoveScroll.cpp  CommandMoveScroll.h  CommandNew.cpp  CommandNew.h  CommandOpen.cpp  (+21 more)
src/data/: ArcShape.cpp  ArcShape.h  Archive.cpp  Archive.h  BezierShape.cpp  BezierShape.h  CMakeLists.txt  CoordinateMapper.cpp  CoordinateMapper.h  Data.cpp  Data.h  DataViewController.cpp  DataViewController.h  File.cpp  File.h  IOFile.cpp  IOFile.h  LineShape.cpp  LineShape.h  Point.h  PointerMapper.cpp  PointerMapper.h  Shape.h  ShapeIdentifier.h  ShapeTypes.h
src/definitions/: CMakeLists.txt  Coordinate.cpp  Coordinate.h  Point.cpp  Point.h  Rect.cpp  Rect.h  ShapeTypes.h  Size.cpp  Size.h  ZoomControl.h
src/ui/: Arc.cpp  Arc.h  Bezier.cpp  Bezier.h  CMakeLists.txt  DrawArea.cpp  DrawArea.h  Line.cpp  Line.h  MainWindow.cpp  MainWindow.h  NewDrawPopup.cpp  NewDrawPopup.h  NewFileStructure.h  UserInterface.cpp  UserInterface.h
